[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ending.gd" type="Script" id=1]
[ext_resource path="res://texture.png" type="Texture" id=2]
[ext_resource path="res://SourceSerifPro-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://SourceSerifPro-It.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[node name="Ending" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 513.035, 297.985 )
scale = Vector2( 2.04723, 1.20342 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_right = 1023.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Summary"
align = 1

[node name="ScoreDetail" type="Label" parent="."]
margin_left = 62.144
margin_top = 100.0
margin_right = 250.144
margin_bottom = 319.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Words Score:
Golds Score:
Health Score:
Time Bonus:

Total Score:"

[node name="Comment" type="Label" parent="."]
margin_left = 8.0
margin_top = 503.0
margin_right = 1019.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Are you satisfied with the result? Or do you want to start over?"
align = 1

[node name="ScoreValue" type="Label" parent="."]
margin_left = 268.516
margin_top = 100.0
margin_right = 456.516
margin_bottom = 319.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="WordSummary" type="Label" parent="."]
margin_left = 537.08
margin_top = 100.0
margin_right = 963.08
margin_bottom = 410.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 387.75
margin_top = 540.071
margin_right = 619.75
margin_bottom = 589.071
custom_fonts/font = SubResource( 4 )
text = "Restart (Space)"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
